@@ -1,3 +1,8 @@
+Thu Apr 19 18:20:59 BST 2007  Olly Betts <olly@survex.com>
+
+	* java-swig/Makefile.am: Handle the extra .class files generated by
+	  nested classes.
+
 Thu Apr 19 14:45:19 BST 2007  Olly Betts <olly@survex.com>
 
 	* Makefile.am,configure.ac,java-swig/,xapian.i: First cut of Java
